--- a/Challenge 1 - B/android.html
+++ b/Challenge 1 - B/android.html
@@ -1,9 +1,11 @@
 <!doctype html>
 <html lang="pt-br">
 <head>
-<meta charset="UTF-8">
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>How did the Android mascot come about?</title>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>How did the Android mascot come about?</title>
+    <link rel="shortcut icon" href="imagens/favicon.ico" type="image/x-icon">
+    <link rel="stylesheet" href="style/style.css">
 </head>
 <body>
     <header>
@@ -18,62 +20,119 @@
     </nav>
     <main>
         <article>
-            Android Mascot History
+            <h1>
+                Android Mascot History
+            </h1>
 
-            You probably know that the Android operating system, maintained by Google, is one of the most used for mobile devices around the world. But perhaps you don't know that your friendly mascot has a very curious name and story? Well, follow this article to learn a lot about this little robot.
+            <p>
+                You probably know that the <strong>Android</strong> operating system, maintained by <strong>Google</strong>, is one of the most used for mobile devices around the world. But perhaps you don't know that your friendly mascot has a very curious name and story? Well, follow this article to learn a lot about this little robot.
+            </p>
 
-            The first version
+            <h2>
+                The first version
+            </h2>
 
-            The first attempt to create a mascot appeared in 2007 and came from a developer named Dan Morrill. He says he opened Inkscape (free software for vectorizing images) and created his own version of the robot. The objective was just to personify the system for its team only, there was no request from the company to create a mascot.
+            <p>The first attempt to create a mascot appeared in 2007 and came from a developer named <a href="https://androidcommunity.com/dan-morrill-shows-us-the-android-mascot-that-almost-was-20130103/" target="_blank">Dan Morrill</a>. He says he opened <a href="https://inkscape.org/pt-br/" target="_blank">Inkscape</a> (free software for vectorizing images) and created his own version of the robot. The objective was just to personify the system for its team only, there was no request from the company to create a mascot.</p>
 
-            [PHOTOGRAPH]
+            <img src="imagens/dan-droids.png" alt="First mascot of Android">
 
-            This first bizarre version was even named after its creator: the Dandroids.
+            <p>
+                This first bizarre version was even named after its creator: the <strong>Dandroids</strong>.
+            </p>
 
-            A new mascot appears
+            <h2>
+                A new mascot appears
+            </h2>
 
-            The idea of ​​having a mascot matured and the mission was passed on to a professional in the field. Russian illustrator Irina Blok, also a Google employee, was tasked with representing the little robot in a more pleasant way.
+            <p>
+                The idea of aving a mascot matured and the mission was passed on to a professional in the field. Russian illustrator <a href="https://www.irinablok.com/" target="_blank">Irina Blok</a>, also a Google employee, was tasked with representing the little robot in a more pleasant way.
+            </p>
 
-            [PHOTOGRAPH]
+            <img src="imagens/irina-blok.jpg" alt="Irina Blok, creator of Bugdroid">
 
-            Irina's main idea was to represent everything graphically with few strokes and in a flatter way. The design should also generate quick identification with those who look at it. Then Bugdroid appeared, Android's new mascot.
+            <p>
+                Irina's main idea was to represent everything graphically with few strokes and in a flatter way. The design should also generate quick identification with those who look at it. Then <strong>Bugdroid</strong> appeared, Android's new mascot.
+            </p>
 
-            [PHOTOGRAPH]
+            <img src="imagens/bugdroid.png" alt="Bugdroid">
 
-            The main inspiration for the new Bugdroid's features came from those little dolls that illustrate bathroom doors to indicate the gender of each door. Legend has it that the artist was creating at her desk in the Google office and looked towards the bathrooms and the identification was immediate: simple, clean, objective.
+            <p>
+                The main inspiration for the new <strong>Bugdroid's</strong> features came from those little dolls that illustrate bathroom doors to indicate the gender of each door. Legend has it that the artist was creating at her desk in the <strong>Google</strong> office and looked towards the bathrooms and the identification was immediate: simple, clean, objective.
+            </p>
 
-            [VIDEO]
+            <iframe width="560" height="315" src="https://www.youtube.com/embed/l2UDgpLz20M?si=SiODxW_uJHZhXDTO" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
             
-            [EXTRA] Want to learn more?
+            <aside>
+                <h3>
+                    Want to learn more?
+                </h3>
+                <p>
+                    Another curious issue regarding Android is that each version has always been named after a sweet, in alphabetical order from version 1.5 to 9.0.
+                </p>
 
-            Another curious issue regarding Android is that each version has always been named after a sweet, in alphabetical order from version 1.5 to 9.0.
+                <ul>
+                    <li>
+                        1.5 - <abbr title="Bolo de Copo (portuguese)">Cupcake</abbr>
+                    </li>
+                    <li>
+                        1.6 - <abbr title="Rosquinha (portuguese)">Donut</abbr>
+                    </li>
+                    <li>
+                        3.0 - <abbr title="Bomba (portuguese)">Eclair</abbr>
+                    </li>
+                    <li>
+                        2.2 - <abbr title="Iogurte Congelado (portuguese)">Froyo</abbr>
+                    </li>
+                    <li>
+                        2.3 - <abbr title="Biscoito de Gengibre (portuguese)">Gingerbread</abbr>
+                    </li>
+                    <li>
+                        3.0 - <abbr title="Favo de Mel (portuguese)">Honeycomb</abbr>
+                    </li>
+                    <li>
+                        4.0 - <abbr title="Saunduíche de Sorvete (portuguese)">Ice Cream Sandwich</abbr>
+                    </li>
+                    <li>
+                        4.1 - <abbr title="Jujuba (portuguese)">Jelly Bean</abbr>
+                    </li>
+                    <li>
+                        4.4 - <abbr title="KitKat (portuguese)">KitKat</abbr>
+                    </li>
+                    <li>
+                        5.0 - <abbr title="Pirulito (portuguese)">Lolipop</abbr>
+                    </li>
+                    <li>
+                        6.0 - <abbr title="Marshmallow (portuguese)">Marshmallow</abbr>
+                    </li>
+                    <li>
+                        7.0 - <abbr title="Torrone (portuguese)">Nougat</abbr>
+                    </li>
+                    <li>
+                        8.0 - <abbr title="Oreo (portuguese)">Oreo</abbr>
+                    </li>
+                    <li>
+                        9.0 - <abbr title="Torta (portuguese)">Pie</abbr>
+                    </li>
+                </ul>
 
-            1.5 - Cupcake
-            1.6 - Donut
-            3.0 - Eclair
-            2.2 - Froyo
-            2.3 - Gingerbread
-            3.0 - Honeycomb
-            4.0 - Ice Cream Sandwich
-            4.1 - Jelly Bean
-            4.4 - KitKat
-            5.0 - Lolipop
-            6.0 - Marshmallow
-            7.0 - Nougat
-            8.0 - Oreo
-            9.0 - Pie
+                <p>
+                    Unfortunately, <strong>Android Q</strong> did not exist, as Google decided to put an end to this fun practice and started using numbering, which gave rise to Android 10.
+                </p>
 
-            Unfortunately, Android Q did not exist, as Google decided to put an end to this fun practice and started using numbering, which gave rise to Android 10.
+                <p>
+                    Visit the <a href="https://www.android.com/intl/en_uk/what-is-android/" target="_blank">Android History</a> website here to find out the sequence of "sweetened" versions and what each one brought to the Android system.
+                </p>
+            </aside>
 
-            Visit the Android History website here to find out the sequence of "sweetened" versions and what each one brought to the Android system.
-            [/EXTRA]
-
-            Then that's it! I hope you enjoyed our article with this curiosity about the Android system and its friendly mascot.
+            <p>
+                Then that's it! I hope you enjoyed our article with this curiosity about the <strong>Android</strong> system and its friendly mascot.
+            </p>
         </article>
+        <footer>
+            <p>Website created by <a href="https://gustavoguanabara.github.io/" target="_blank">Gustavo Guanabara</a> for <a href="https://www.youtube.com/cursoemvideo" target="_blank">CursoemVideo</a></p>
+        </footer>
     </main>
 </body>
 </html>
 
-
-Website created by Gustavo Guanabara for CursoemVideo.
 
